--- a/src/styles/game/inGameMenu.module.css
+++ b/src/styles/game/inGameMenu.module.css
@@ -1,6 +1,6 @@
 .menuHeader {
   text-align: center;
-  padding-block: 5.8rem;
+  padding-block: 5rem;
 }
 .menuHeader nav {
   align-items: center;
